<resources>
    <string name="app_name">WhatsApp</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="call">Calls</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call_txt">Call</string>
    <string name="chat_txt">Chat</string>
    <string name="status_txt">Status</string>
    <string name="setting">Setting</string>
    <string name="SignOut">Sign Out</string>
    <string name="username">UserName</string>
    <string name="search">Search</string>
    <string name="Camera">Camera</string>
    <string name="pin">Pin</string>
    <string name="mute">Mute</string>
    <string name="Archive">Archive</string>
    <string name="signup">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_sms">Send SMS</string>
    <string name="code">Enter Code</string>
    <string name="verify">Verify</string>
    <string name="type_a_message">Type a Message....</string>
    <string name="confirm_settings">Confirm Settings</string>
    <string name="my_name">User Name</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="anonymous">Anonymous</string>

</resources>