<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/whatsapp_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        android:elevation="24dp"
        android:background="@color/whatsapp_tab_layout_color"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="@dimen/_2sdp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/tab_text_color"
        app:tabIconTint="@color/tab_text_color"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.tabs.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/chat_txt"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_txt"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_txt"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_camera_alt_24"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_container"
        android:background="@color/whatsapp_tab_layout_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/whatsapp_tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>